# CS3099-A9

./: .gitignore  .gitlab-ci.yml  README.md
backend/: .env  .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  db.sh  fed_auth.pem  fed_auth_pub.pem  known_hosts.txt  purge_db.sh  setup.env  setup.md
backend/documentation/: .rustc_info.json
backend/documentation/doc/: search-index.js  settings.html  source-files.js
backend/documentation/doc/implementors/actix_http/error/: trait.ResponseError.js
backend/documentation/doc/implementors/actix_web/service/: trait.HttpServiceFactory.js
backend/documentation/doc/implementors/core/clone/: trait.Clone.js
backend/documentation/doc/implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
backend/documentation/doc/implementors/core/convert/: trait.From.js  trait.TryFrom.js
backend/documentation/doc/src/starlight/: main.rs.html
backend/documentation/doc/starlight/: all.html  fn.main.html  index.html  sidebar-items.js  type.DBPool.html
backend/documentation/doc/starlight/database/: fn.get_conn_from_pool.html  fn.naive_date_time_now.html  index.html  sidebar-items.js
backend/documentation/doc/starlight/federation/: index.html  sidebar-items.js  struct.discover.html  struct.hello.html  struct.key.html
backend/documentation/doc/starlight/internal/: enum.LocatedCommunity.html  fn.get_known_hosts.html  index.html  sidebar-items.js  struct.discover.html
backend/documentation/doc/starlight/util/: constant.HOSTNAME.html  enum.UserDetail.html  index.html  sidebar-items.js
backend/migrations/2020-10-26-152758_protocol_v1/: down.sql  up.sql
backend/migrations/2020-10-31-193234_pseudo_protocol_setup/: down.sql  up.sql
backend/src/: lib.rs  main.rs  util.rs
backend/src/database/: communities.rs  federation.rs  local.rs  mod.rs  models.rs  schema.rs  sql_types.rs
backend/src/database/actions/: communities.rs  federation.rs  local.rs  mod.rs  post.rs  user.rs
backend/src/federation/: communities.rs  mod.rs  posts.rs  schemas.rs  users.rs
backend/src/internal/: authentication.rs  communities.rs  mod.rs  posts.rs  user.rs
backend/src/util/: header_error.rs  mod.rs  route_error.rs
(+467 files in other folders)
