[package]
name = "backend"
version = "0.1.0"
authors = ["Anson <twac@st-andrews.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
dotenv = "^0.15.0"
serde = "^1.0.117"
diesel = { version = "1.4.4", features = ["mysql", "r2d2"] }
r2d2 = "^0.8.9"