[package]
name = "backend"
version = "0.1.0"
authors = ["Anson <twac@st-andrews.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^3.2.0"
dotenv = "^0.15.0"
serde = "^1.0.117"
diesel = { version = "^1.4.4", features = ["mysql", "r2d2", "chrono", "numeric"] }
r2d2 = "^0.8.9"
chrono = { version = "^0.4.19", features = ["serde"] }
thiserror = "^1.0.22"
uuid = { version = "^0.8.1", features = ["v4", "serde"] }
either = { version = "^1.6.1", features = ["serde"] }
jsonwebtoken = "^7.2.0"
actix-web-httpauth = "^0.5.0"
actix-cors = "^0.5.2"